# Mongo-models-generator

./: .env  .gitignore  CMakeLists.txt  DockerFile  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml  main.cpp
configs/: config_interface.cc  config_interface.hh  configs.hh  configs_manager.hh  configs_manager.tpp
configs/data/: MongodbConfig.json  OrderConfig.json
configs/schemas/: model_test.yaml  mongodb.yaml
databases/mongodb/: client.cc  client.hh  collection_interface.hh  manager.cc  manager.hh  rs-init.sh
generators/: generate.py  generate.sh
json/: base-model.cpp  base-model.hpp  rabbit_json.hpp
models/schemas/: model_test.yaml
test/: CMakeLists.txt  log.hh
utils/: singleton.hh
